# kifu

./: .gitignore  CMakeLists.txt  CMakeLists.txt.Eigen  CMakeLists.txt.flann  CMakeLists.txt.gtest  CMakeLists.txt.in  DataTypes.h  KinectFusion.cpp  KinectFusion.h  README.md  SimpleMesh.h  flann.patch  googletest.patch  main.cpp
.github/workflows/: ccpp.yml
ProjectExecutable/: CMakeLists.txt  main.cpp
ProjectLibrary/: CMakeLists.txt  DataTypes.h  KinectFusion.cpp  KinectFusion.h  PoseEstimator.cpp  PoseEstimator.h  SurfaceMeasurer.cpp  SurfaceMeasurer.h  SurfacePredictor.cpp  SurfacePredictor.h  SurfaceReconstructor.cpp  SurfaceReconstructor.h
ProjectLibrary/utils/: BilateralFilter.h  FreeImageHelper.cpp  FreeImageHelper.h  NearestNeighbor.h  SimpleMesh.h  StopWatch.h  VirtualSensor.h
src/: DataTypes.h  PoseEstimator.cpp  PoseEstimator.h  SurfaceMeasurer.h  SurfacePredictor.cpp  SurfacePredictor.h  SurfaceReconstructor.cpp  SurfaceReconstructor.h
src/utils/: Eigen.h  SimpleMesh.h  VirtualSensor.h
test/: BilateralFilterTest.cpp  CMakeLists.txt  LinkTest.cpp  MockTest.cpp  TsdfTest.cpp  tests.cpp
